--- a/voto-client/src/index.html
+++ b/voto-client/src/index.html
@@ -11,15 +11,11 @@
 <body>
   <app-root></app-root>
   <script
-  src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-  integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
-  crossorigin="anonymous"></script>
+    src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
+    crossorigin="anonymous">
+  </script>
   <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.10/semantic.min.js"></script>
   <script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script>
-  <script>
-    $('app-root .sidebar')
-    .sidebar({context:$('app-root')})
-    .sidebar('setting', 'transition', 'overlay') ;
-  </script>
 </body>
 </html>
