added card layout to poll-list and styled poll-option-list

--- a/voto-client/src/index.html
+++ b/voto-client/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.2/semantic.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
   <title>VotoClient</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
